# freshtracks-macos-menubar

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.vue  config.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: RollingNumber.vue
src/services/: api.ts
