[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2.3.3"
reqwest = { version = "0.12.24", features = ["json"] }
tauri-plugin-notification = "2.3.3"
chrono = "0.4.42"
once_cell = "1.21.3"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-autostart = "2.5.1"
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"
url = "2.5.7"
tokio = { version = "1.48.0", features = ["time"] }

# Image rendering for dynamic tray icon with timer text
image = "0.24"
imageproc = "0.23"
rusttype = "0.9"
